Small error handeling fix in PreCheckUtil